updated html with 3 new articles

--- a/index.html
+++ b/index.html
@@ -213,6 +213,36 @@
       </div>
     </div>
 
+    <div class="card" data-tab="javascript">
+      <div class="headline">The Number 1 Reason To Skip Lambda School's JavaScript Section (Hint: It's Hard!)</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/puppers.jpg" />
+        </div>
+        <span>By DARIEN PAYTON</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="bootstrap">
+      <div class="headline">Is Bootstrap The Best Front-End Framework?</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/bones.jpg" />
+        </div>
+        <span>By DARIEN PAYTON</span>
+      </div>
+    </div>
+
+    <div class="card" data-tab="technology">
+      <div class="headline">Why Every Person Should Study Quantum Mechanics and Quantum Computing</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/fido.jpg" />
+        </div>
+        <span>By DARIEN PAYTON</span>
+      </div>
+    </div>
+
   </div>
 </body>
 
